evdevkeyboard: Try opening as read-write first

switchLed writes to the device, and so O_RDONLY cannot be correct.

Change-Id: If79814804bcd3c6fb01617be9f1a73e54b9563bd
Fixes: QTBUG-80653
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 9c05fdac81d5fe0d3007ba55cfddf4eb99183153)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>